[package]
name = "bevy_vello_renderer"
version = "0.1.0"
edition = "2021"
categories = ["vector-graphics", "graphics", "gui", "rendering", "motion-graphics"]
description = "A minimal integration for rendering Vello graphics in Bevy."
exclude = ["assets/", "tools/", ".github/", "crates/", "examples/wasm/assets/"]
keywords = ["vector-graphics", "graphics", "vello", "motion-graphics"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/nixon-voxell/bevy_vello_renderer"

[dependencies]
bevy_ecs = { version = "0.13", default-features = false }
bevy_render = { version = "0.13", default-features = false }
bevy_window = { version = "0.13", default-features = false }
bevy_asset = { version = "0.13", default-features = false }
bevy_transform = { version = "0.13", default-features = false }
bevy_reflect = { version = "0.13", default-features = false }
bevy_utils = { version = "0.13", default-features = false }
bevy_log = { version = "0.13", default-features = false }
bevy_app = { version = "0.13", default-features = false }
bevy_time = { version = "0.13", default-features = false }
bevy_math = { version = "0.13", default-features = false }
bevy_sprite = { version = "0.13", default-features = false }
vello = { git = "https://github.com/nixon-voxell/vello", rev = "ffa808a698149accf51b2c2f38136208020e554a" }
vello_svg = { git = "https://github.com/nixon-voxell/vello", rev = "ffa808a698149accf51b2c2f38136208020e554a" }

[dev-dependencies]
bevy = "0.13"

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"
